Fixing position and team name, and more spacing between fixed column and remaining table

--- a/frontend/src/pages/Sports/SportClassification/SportTable/index.css
+++ b/frontend/src/pages/Sports/SportClassification/SportTable/index.css
@@ -3,6 +3,7 @@
   font-weight: bold;
   width: 15em;
   text-align: center;
+  margin-left: 50px;
 }
 
 tr td:nth-child(1) {
@@ -19,7 +20,7 @@ tr td:nth-child(1) {
 }
 
 td,th {
-  margin: 0;
+  margin: 0px;
   white-space: nowrap;
   color: white;
   border-width: 0px;
@@ -29,7 +30,7 @@ td,th {
 .divcss {
   width: 80%;
   overflow-x: scroll;
-  margin-left: 15em;
+  margin-left: 20em;
   margin-right: 50rem;
 }
 
@@ -78,10 +79,10 @@ tr:hover {
 }
 
 .teamnamecss {
-  width: 10rem;
-  display: inline;
+  width: 7rem;
+  display: inline-block;
   position: center;
-  margin-right: 20px;
+  margin-right: 15px;
 }
 
 .tablecss {
@@ -91,7 +92,7 @@ tr:hover {
 
 .headcol {
   position: absolute;
-  width: 15em;
+  width: 20em;
   left: 0;
   top: auto;
   border-top-width: 1px;  
